--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".WeatherForecast"></activity>
         <activity android:name=".ChatRoomActivity"></activity>
         <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".MainActivity">
@@ -20,5 +21,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
